# fllc-scheduler-ga

./: .gitignore  README.md  REAL_LIFE_EXAMPLES.md  pyproject.toml  requirements.txt  run_ui.py  tox.ini  whitelist.py
.github/workflows/: main.yml
docs/source/: conf.py  index.rst
fll_scheduler_ga/: __init__.py  __main__.py  cli.py  config.ini  config.json  engine.py  logging.json
fll_scheduler_ga/api/: __init__.py  main.py  manager.py  models.py
fll_scheduler_ga/api/static/: index.html  script.js  style.css
fll_scheduler_ga/cli/: __init__.py  cli.py  cli_typer.py  loggers.py  runners.py
fll_scheduler_ga/config/: __init__.py  _config_manager.py  app_config.py  app_schemas.py  benchmark.py  cli.py  config.ini  config.py  config_manager.py  constants.py  ga_context.py  ga_operators_config.py  ga_parameters.py  preflight.py  pydantic_schemas.py  schemas.py
fll_scheduler_ga/data_model/: __init__.py  app_schemas.py  config.py  event.py  location.py  schedule.py  team.py  time.py  timeslot.py  tournament_config.py  tournament_round.py
fll_scheduler_ga/fitness/: __init__.py  benchmark.py  benchmark_repository.py  fitness.py  fitness_base.py  fitness_population.py  fitness_schedule.py  hard_constraint_checker.py
fll_scheduler_ga/genetic/: __init__.py  builder.py  fitness.py  ga.py  ga_context.py  ga_generation.py  ga_parameters.py  island.py  population.py  preflight_checker.py  schedule.py  schedule_repairer.py  stagnation.py  states.py
fll_scheduler_ga/io/: __init__.py  base_exporter.py  csv_importer.py  export.py  ga_exporter.py  importer.py  observers.py  plot.py  schedule_exporter.py  seed_fitness_benchmark.py  seed_ga.py
fll_scheduler_ga/observers/: __init__.py  base_observer.py  loggers.py  progress.py
fll_scheduler_ga/operators/: __init__.py  crossover.py  mutation.py  nsga2.py  nsga3.py  repairer.py  selection.py
fll_scheduler_ga/preflight/: __init__.py  preflight.py
fll_scheduler_ga/visualize/: __init__.py  plot.py  utils.py
real_life_examples/fllc_2022-2023/: config.ini  config.json  fllc_2022-2023_config.ini  fllc_2022-2023_report.txt  report.txt  schedule.csv
real_life_examples/fllc_2023-2024/: config.ini  config.json  fllc_2023-2024_config.ini  fllc_2023-2024_report.txt  report.txt  schedule.csv
real_life_examples/fllc_2024-2025/: config.ini  config.json  fllc_2024-2025_report.txt  report.txt  schedule.csv
real_life_examples/fllc_2025-2026/: config.json  report.txt  schedule.csv
real_life_examples/fllc_2025-2026_Table_Only_TM/: config.json  report.txt  schedule.csv
tests/: __init__.py  conftest.py
tests/cli/: __init__.py
tests/config/: test_app_config.py  test_config_manager.py  test_pydantic_schemas.py
tests/data_model/: __init__.py  test_event.py  test_location.py  test_schedule.py  test_time.py  test_timeslot.py
tests/fitness/: __init__.py
tests/genetic/: __init__.py  test_fitness.py
tests/operators/: __init__.py
