[project]
name = "fll-scheduler-ga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wonyoung Jang", email = "contact@wonyoungjang.org" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "snakeviz>=2.2.2",
    "tqdm>=4.67.1",
    "vulture>=2.14",
]

[project.scripts]
fll-scheduler-ga = "fll_scheduler_ga.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "scratch",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = [
    "ANN401",  
    "ARG002", 
    "C901",  
    "COM812", 
    "D203",  
    "D213",  
    "ERA001",  
    "PLR2004",  
    "S", 
    "TID252",  
]
fixable = ["ALL"]
unfixable = []
extend-select = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
