[project]
name = "fll-scheduler-ga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wonyoung Jang", email = "contact@wonyoungjang.org" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.0.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "typer>=0.20.0",
]

[project.scripts]
fll-scheduler-ga = "fll_scheduler_ga.__main__:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fll_scheduler_ga"
module-root = ""

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-exclude = [
    "docs",
    ".playground",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = [
    "ANN401",  
    "ARG002", 
    "C901",  
    "COM812", 
    "D203",  
    "D213",  
    "ERA001",  
    "PLR2004",  
    "S", 
    "TID252",  
    "T201",
]
fixable = ["ALL"]
unfixable = []
extend-select = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.vulture]
paths = ["./fll_scheduler_ga", "whitelist.py"]
ignore_decorators = ["@app.*"]
min_confidence = 40
verbose = false

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-v",
]
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "line-profiler>=5.0.0",
    "memory-profiler>=0.0.0",
    "psutil>=7.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
]
docs = [
    "zensical>=0.0.14",
]
